[package]
name = "handysnap"
version = "0.1.0"
authors = ["chudongyu <chudongyu@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#image = "0.25.0"
fltk = { version = "^1.4", features = ["fltk-bundled"] }

[build-dependencies]
fl2rust = "0.5.19"
